Fixed overflow bug

--- a/src/sass/page-render-as-text.scss
+++ b/src/sass/page-render-as-text.scss
@@ -104,9 +104,11 @@
 	.render-as-text {
 		width: 100%;
 
-		section {
-			width: 100%;
-			max-width: $lhse*11.5;
+		.lists {
+			section {
+				max-width: $width-textarea-card-list;
+				width: 100%;
+			}
 		}
 	}
 }
